# FluffyCrypt

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  pub.key
client/src/: comms.rs  decryption.rs  encryptor.rs  filesystem.rs  main.rs  obfuscation.rs  safeguard.rs
protocol-test/: Cargo.toml
protocol-test/src/: comms.rs  main.rs
server/: Cargo.toml
server/migrations/2024-11-16-154546_initial_migration/: down.sql  up.sql
server/migrations/2024-11-17-193554_add_paid/: down.sql  up.sql
server/migrations/2024-11-18-040110_set_key_datatypes/: down.sql  up.sql
server/migrations/2024-11-22-041916_make_key_binary/: down.sql  up.sql
server/src/: comms.rs  main.rs  models.rs  schema.rs
