[package]
name = "fluffycrypt_server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
openssl = {version = "0.10.68", features = ["vendored"] }
tokio = {version = "1.41.1", features = ["net", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
zeroize = "1.8.1"
