[package]
name = "fluffycrypt_server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   # Enable link time optimizations

[dependencies]
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
openssl = {version = "0.10.70", features = ["vendored"] }
tokio = {version = "1.41.1", features = ["net", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
zeroize = "1.8.1"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
